--- a/css/styles.css
+++ b/css/styles.css
@@ -11,31 +11,34 @@
   --grey: rgba(46, 47, 66, 0.7);
   --white: #fff;
   --dairy: #fcfcfc;
-  --font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
   --second-family: "Raleway", sans-serif;
+  color: #434455;
+  background-color: #ffffff;
 }
 .header {
-  display: flex;
 }
 
 .logo {
+  font-family: var(--second-family);
   font-weight: 700;
   font-size: 18px;
   line-height: 1.16667;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--navy-blue);
+  color: var(--iris);
   text-decoration: none;
+  line-height: 1.17;
 }
 .logo-blue {
   font-family: var(--second-family);
   font-weight: 700;
   font-size: 18px;
 
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--iris);
+  color: var(--navy-blue);
 }
 
 .contacts {
@@ -68,7 +71,6 @@
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--white);
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: var(--iris);
 }
 .title-section1 {
@@ -90,10 +92,11 @@
   font-family: var(--font-family);
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: var(--navy-blue);
+  text-transform: capitalize;
 }
 .team-member {
   font-family: var(--font-family);
@@ -150,4 +153,32 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--cloud);
+}
+.nav {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--navy-blue);
+  text-decoration: none;
+}
+.nav:hover,
+.nav:focus {
+  color: var(--ocean);
+}
+.address {
+  font-style: normal;
+}
+.contacts:hover,
+.contacts:focus {
+  color: var(--ocean);
+}
+.features {
+  background-color: var(--cloud);
+}
+.section1-list {
+  background-color: var(--white);
+}
+.footer {
+  background-color: var(--navy-blue);
 }
