--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--white);
+  color: var(--cloud);
 }
 
 .contacts {
