--- a/css/styles.css
+++ b/css/styles.css
@@ -83,14 +83,14 @@
   background: var(--iris);
   cursor: pointer;
 }
-.title-section1 {
+.title-section {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
 }
-.section1-description {
+.section-description {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
